--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 			<version>0.11.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.6</version>
+		</dependency -->
 	</dependencies>
 </project>
