--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
 			<version>0.11.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.6</version>
-		</dependency -->
+		</dependency>
 	</dependencies>
 </project>
