--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,20 @@
 	<artifactId>napalm-modules</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<properties>
+		<slf4j.version>1.7.9</slf4j.version>
+		<lombok.version>1.16.16</lombok.version>
+	</properties>
 	<modules>
 		<module>api</module>
 		<module>implementation</module>
 	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
